FEATURE: APIs for Group & Card
